--- a/h2.html
+++ b/h2.html
@@ -12,7 +12,7 @@
         <div class="left">
             <form onsubmit="return false">
                 <input id="myInput" type="text" name="" placeholder="search movie" />
-                <input type="submit" value="submit" onclick="apiCall()">
+                <input type="submit" value="submit" onclick="apiCall()" submit.disabled = true;>
             </form>
 
             
