--- a/h2.html
+++ b/h2.html
@@ -8,26 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <section id="loading">
-            <img src="C:\Users\hemad\Documents\GitHub\movie_recommendation\load_icon.gif">
-        </section>
         <center><h1>Movie Recommendation Page</h1></center>
         <div class="left">
             <form onsubmit="return false">
                 <input id="myInput" type="text" name="" placeholder="search movie" />
                 <button id="sbmt" onclick="loadData()"> SEARCH </button>
             </form>
-
+            <div class="wrapper"></div>
         </div>
 
-        <div id="right">
+        <div id="div2">
             <p id="p1">WATCHLIST</p>
             <p id="p2">
 
                 Selected movies will appear here <br />[Click add button on search results to add an item to this list]
 
             </p>
-
         </div>
 
     </div>
